Fixed weird spacing between contact and portfolio

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -2,7 +2,7 @@
 	background-color: #171717;
 	color: whitesmoke;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 }
 
 .form-title {
