--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,7 +1,7 @@
 .detail-container {
 	background-color: #ece9e6;
 	width: 100%;
-	height: 100%;
+	height: 400vh;
 }
 
 .detail-container h2 {
